--- a/FleetCommand.csproj
+++ b/FleetCommand.csproj
@@ -106,8 +106,15 @@
     <!-- bgmusic.wav embedded directly so GetManifestResourceStream works -->
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Battlecruiser2.jpg" />
-    <Content Include="Resources\Destroyer.jpg" />
+    <Content Include="Resources\Battlecruiser2.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Carrier.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Destroyer.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Mothership.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
